# carga_bot

./: .gitignore  CMakeLists.txt  Cinematica_Diferencial.ipynb  Dockerfile  README.md  package.xml
config/: carga_map.yaml  mapper_params_online_async.yaml  nav2_params.yaml  prueba_map.pgm  prueba_map.yaml
launch/: bcr_bot_gz_spawn.launch.py  bcr_bot_ign_spawn.launch.py  carga_bot_gazebo_spawn.launch.py  gazebo.launch.py  gz.launch.py  ign.launch.py  mapping.launch.py  nav2.launch.py  rviz.launch.py
meshes/: bcr_bot_mesh.dae  carga_bot_mesh.dae
scripts/: remapper.py
urdf/: carga_bot.xacro  gazebo.xacro  gz.xacro  ign.xacro  macros.xacro  materials.xacro
