<?xml version="1.0"?>
<package format="2">
	<name>carga_bot</name>
	<version>1.0.2</version>
	<description>carga_bot</description>

	<maintainer email="iandre.cabrera@gmail.com">Iván</maintainer>
  	<license>Apache-2.0</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<exec_depend>ament_index_python</exec_depend>
	<exec_depend>launch</exec_depend>
	<exec_depend>launch_ros</exec_depend>
	<exec_depend>robot_state_publisher</exec_depend>
	<exec_depend>xacro</exec_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
